# Markdown-Note-Taker

./: __init__.py  __main__.py  app.py  file_ops.py  pyproject.toml
screens/: new_file.py
widgets/: editor.py  footer.py  sidebar.py
